// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/react-dom.js globals $JSXIntrinsics generated - interface 1`] = `
"class A1 extends $JSXIntrinsics {}
"
`;

exports[`lib/react-dom.js globals $JSXIntrinsics generated - type 1`] = `""`;

exports[`lib/react-dom.js globals SyntheticAnimationEvent generated - class - typePrams(0 - 1) 1`] = `
"import { AnimationEvent } from \\"react\\";
new AnimationEvent();

class A1 extends AnimationEvent {}
class A2 extends AnimationEvent<P0> {}
let a2 = new AnimationEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticAnimationEvent variable 1`] = `
"import { AnimationEvent } from \\"react\\";
var a = AnimationEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticClipboardEvent generated - class - typePrams(0 - 1) 1`] = `
"import { ClipboardEvent } from \\"react\\";
new ClipboardEvent();

class A1 extends ClipboardEvent {}
class A2 extends ClipboardEvent<P0> {}
let a2 = new ClipboardEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticClipboardEvent variable 1`] = `
"import { ClipboardEvent } from \\"react\\";
var a = ClipboardEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticCompositionEvent generated - class - typePrams(0 - 1) 1`] = `
"import { CompositionEvent } from \\"react\\";
new CompositionEvent();

class A1 extends CompositionEvent {}
class A2 extends CompositionEvent<P0> {}
let a2 = new CompositionEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticCompositionEvent variable 1`] = `
"import { CompositionEvent } from \\"react\\";
var a = CompositionEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticDragEvent generated - class - typePrams(0 - 1) 1`] = `
"import { DragEvent } from \\"react\\";
new DragEvent();

class A1 extends DragEvent {}
class A2 extends DragEvent<P0> {}
let a2 = new DragEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticDragEvent variable 1`] = `
"import { DragEvent } from \\"react\\";
var a = DragEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticEvent generated - class - typePrams(0 - 2) 1`] = `
"import { SyntheticEvent } from \\"react\\";
new SyntheticEvent();

class A1 extends SyntheticEvent {}
class A2 extends SyntheticEvent<P0> {}
let a2 = new SyntheticEvent<P0>();

class A3 extends SyntheticEvent<P0, P1> {}
let a3 = new SyntheticEvent<P0, P1>();
"
`;

exports[`lib/react-dom.js globals SyntheticEvent variable 1`] = `
"import { SyntheticEvent } from \\"react\\";
var a = SyntheticEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticFocusEvent generated - class - typePrams(0 - 1) 1`] = `
"import { FocusEvent } from \\"react\\";
new FocusEvent();

class A1 extends FocusEvent {}
class A2 extends FocusEvent<P0> {}
let a2 = new FocusEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticFocusEvent variable 1`] = `
"import { FocusEvent } from \\"react\\";
var a = FocusEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticInputEvent generated - class - typePrams(0 - 1) 1`] = `
"import { ChangeEvent } from \\"react\\";
new ChangeEvent();

class A1 extends ChangeEvent {}
class A2 extends ChangeEvent<P0> {}
let a2 = new ChangeEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticInputEvent variable 1`] = `
"import { ChangeEvent } from \\"react\\";
var a = ChangeEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticKeyboardEvent generated - class - typePrams(0 - 1) 1`] = `
"import { KeyboardEvent } from \\"react\\";
new KeyboardEvent();

class A1 extends KeyboardEvent {}
class A2 extends KeyboardEvent<P0> {}
let a2 = new KeyboardEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticKeyboardEvent variable 1`] = `
"import { KeyboardEvent } from \\"react\\";
var a = KeyboardEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticMouseEvent generated - class - typePrams(0 - 2) 1`] = `
"import { MouseEvent } from \\"react\\";
new MouseEvent();

class A1 extends MouseEvent {}
class A2 extends MouseEvent<P0> {}
let a2 = new MouseEvent<P0>();

class A3 extends MouseEvent<P0, P1> {}
let a3 = new MouseEvent<P0, P1>();
"
`;

exports[`lib/react-dom.js globals SyntheticMouseEvent variable 1`] = `
"import { MouseEvent } from \\"react\\";
var a = MouseEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticPointerEvent generated - class - typePrams(0 - 1) 1`] = `
"import { PointerEvent } from \\"react\\";
new PointerEvent();

class A1 extends PointerEvent {}
class A2 extends PointerEvent<P0> {}
let a2 = new PointerEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticPointerEvent variable 1`] = `
"import { PointerEvent } from \\"react\\";
var a = PointerEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticTouchEvent generated - class - typePrams(0 - 1) 1`] = `
"import { TouchEvent } from \\"react\\";
new TouchEvent();

class A1 extends TouchEvent {}
class A2 extends TouchEvent<P0> {}
let a2 = new TouchEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticTouchEvent variable 1`] = `
"import { TouchEvent } from \\"react\\";
var a = TouchEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticTransitionEvent generated - class - typePrams(0 - 1) 1`] = `
"import { TransitionEvent } from \\"react\\";
new TransitionEvent();

class A1 extends TransitionEvent {}
class A2 extends TransitionEvent<P0> {}
let a2 = new TransitionEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticTransitionEvent variable 1`] = `
"import { TransitionEvent } from \\"react\\";
var a = TransitionEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticUIEvent generated - class - typePrams(0 - 2) 1`] = `
"import { UIEvent } from \\"react\\";
new UIEvent();

class A1 extends UIEvent {}
class A2 extends UIEvent<P0> {}
let a2 = new UIEvent<P0>();

class A3 extends UIEvent<P0, P1> {}
let a3 = new UIEvent<P0, P1>();
"
`;

exports[`lib/react-dom.js globals SyntheticUIEvent variable 1`] = `
"import { UIEvent } from \\"react\\";
var a = UIEvent;
"
`;

exports[`lib/react-dom.js globals SyntheticWheelEvent generated - class - typePrams(0 - 1) 1`] = `
"import { WheelEvent } from \\"react\\";
new WheelEvent();

class A1 extends WheelEvent {}
class A2 extends WheelEvent<P0> {}
let a2 = new WheelEvent<P0>();
"
`;

exports[`lib/react-dom.js globals SyntheticWheelEvent variable 1`] = `
"import { WheelEvent } from \\"react\\";
var a = WheelEvent;
"
`;

exports[`lib/react-dom.js modules react-dom createPortal generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom\\";

M.createPortal();
"
`;

exports[`lib/react-dom.js modules react-dom createPortal generated - callable - import renamed 1`] = `
"import { createPortal as t } from \\"react-dom\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom createPortal generated - callable 1`] = `
"import { createPortal } from \\"react-dom\\";

createPortal();
"
`;

exports[`lib/react-dom.js modules react-dom createPortal generated - class - import namespace 1`] = `
"import * as M from \\"react-dom\\";

new M.createPortal();

class A1 extends M.createPortal {}
"
`;

exports[`lib/react-dom.js modules react-dom createPortal generated - class - import renamed 1`] = `
"import { createPortal as t } from \\"react-dom\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom createPortal generated - class 1`] = `
"import { createPortal } from \\"react-dom\\";

new createPortal();

class A1 extends createPortal {}
"
`;

exports[`lib/react-dom.js modules react-dom createPortal variable 1`] = `
"var a = createPortal;
"
`;

exports[`lib/react-dom.js modules react-dom findDOMNode generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom\\";

M.findDOMNode();
"
`;

exports[`lib/react-dom.js modules react-dom findDOMNode generated - callable - import renamed 1`] = `
"import { findDOMNode as t } from \\"react-dom\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom findDOMNode generated - callable 1`] = `
"import { findDOMNode } from \\"react-dom\\";

findDOMNode();
"
`;

exports[`lib/react-dom.js modules react-dom findDOMNode generated - class - import namespace 1`] = `
"import * as M from \\"react-dom\\";

new M.findDOMNode();

class A1 extends M.findDOMNode {}
"
`;

exports[`lib/react-dom.js modules react-dom findDOMNode generated - class - import renamed 1`] = `
"import { findDOMNode as t } from \\"react-dom\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom findDOMNode generated - class 1`] = `
"import { findDOMNode } from \\"react-dom\\";

new findDOMNode();

class A1 extends findDOMNode {}
"
`;

exports[`lib/react-dom.js modules react-dom findDOMNode variable 1`] = `
"var a = findDOMNode;
"
`;

exports[`lib/react-dom.js modules react-dom hydrate generated - callable - import namespace - typePrams(1) 1`] = `
"import * as M from \\"react-dom\\";

M.hydrate();

let a1 = M.hydrate<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom hydrate generated - callable - import renamed - typePrams(1) 1`] = `
"import { hydrate as t } from \\"react-dom\\";

t();

let a1 = t<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom hydrate generated - callable - typePrams(1) 1`] = `
"import { hydrate } from \\"react-dom\\";

hydrate();

let a1 = hydrate<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom hydrate generated - class - import namespace - typePrams(1) 1`] = `
"import * as M from \\"react-dom\\";

new M.hydrate();

class A1 extends M.hydrate<P0> {}
let a1 = new M.hydrate<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom hydrate generated - class - import renamed - typePrams(1) 1`] = `
"import { hydrate as t } from \\"react-dom\\";

new t();

class A1 extends t<P0> {}
let a1 = new t<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom hydrate generated - class - typePrams(1) 1`] = `
"import { hydrate } from \\"react-dom\\";

new hydrate();

class A1 extends hydrate<P0> {}
let a1 = new hydrate<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom hydrate variable 1`] = `
"var a = hydrate;
"
`;

exports[`lib/react-dom.js modules react-dom render generated - callable - import namespace - typePrams(1) 1`] = `
"import * as M from \\"react-dom\\";

M.render();

let a1 = M.render<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom render generated - callable - import renamed - typePrams(1) 1`] = `
"import { render as t } from \\"react-dom\\";

t();

let a1 = t<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom render generated - callable - typePrams(1) 1`] = `
"import { render } from \\"react-dom\\";

render();

let a1 = render<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom render generated - class - import namespace - typePrams(1) 1`] = `
"import * as M from \\"react-dom\\";

new M.render();

class A1 extends M.render<P0> {}
let a1 = new M.render<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom render generated - class - import renamed - typePrams(1) 1`] = `
"import { render as t } from \\"react-dom\\";

new t();

class A1 extends t<P0> {}
let a1 = new t<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom render generated - class - typePrams(1) 1`] = `
"import { render } from \\"react-dom\\";

new render();

class A1 extends render<P0> {}
let a1 = new render<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom render variable 1`] = `
"var a = render;
"
`;

exports[`lib/react-dom.js modules react-dom unmountComponentAtNode generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom\\";

M.unmountComponentAtNode();
"
`;

exports[`lib/react-dom.js modules react-dom unmountComponentAtNode generated - callable - import renamed 1`] = `
"import { unmountComponentAtNode as t } from \\"react-dom\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom unmountComponentAtNode generated - callable 1`] = `
"import { unmountComponentAtNode } from \\"react-dom\\";

unmountComponentAtNode();
"
`;

exports[`lib/react-dom.js modules react-dom unmountComponentAtNode generated - class - import namespace 1`] = `
"import * as M from \\"react-dom\\";

new M.unmountComponentAtNode();

class A1 extends M.unmountComponentAtNode {}
"
`;

exports[`lib/react-dom.js modules react-dom unmountComponentAtNode generated - class - import renamed 1`] = `
"import { unmountComponentAtNode as t } from \\"react-dom\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom unmountComponentAtNode generated - class 1`] = `
"import { unmountComponentAtNode } from \\"react-dom\\";

new unmountComponentAtNode();

class A1 extends unmountComponentAtNode {}
"
`;

exports[`lib/react-dom.js modules react-dom unmountComponentAtNode variable 1`] = `
"var a = unmountComponentAtNode;
"
`;

exports[`lib/react-dom.js modules react-dom unstable_batchedUpdates generated - callable - import namespace - typePrams(5) 1`] = `
"import * as M from \\"react-dom\\";

M.unstable_batchedUpdates();

let a1 = M.unstable_batchedUpdates<P0, P1, P2, P3, P4>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_batchedUpdates generated - callable - import renamed - typePrams(5) 1`] = `
"import { unstable_batchedUpdates as t } from \\"react-dom\\";

t();

let a1 = t<P0, P1, P2, P3, P4>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_batchedUpdates generated - callable - typePrams(5) 1`] = `
"import { unstable_batchedUpdates } from \\"react-dom\\";

unstable_batchedUpdates();

let a1 = unstable_batchedUpdates<P0, P1, P2, P3, P4>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_batchedUpdates generated - class - import namespace - typePrams(5) 1`] = `
"import * as M from \\"react-dom\\";

new M.unstable_batchedUpdates();

class A1 extends M.unstable_batchedUpdates<P0, P1, P2, P3, P4> {}
let a1 = new M.unstable_batchedUpdates<P0, P1, P2, P3, P4>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_batchedUpdates generated - class - import renamed - typePrams(5) 1`] = `
"import { unstable_batchedUpdates as t } from \\"react-dom\\";

new t();

class A1 extends t<P0, P1, P2, P3, P4> {}
let a1 = new t<P0, P1, P2, P3, P4>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_batchedUpdates generated - class - typePrams(5) 1`] = `
"import { unstable_batchedUpdates } from \\"react-dom\\";

new unstable_batchedUpdates();

class A1 extends unstable_batchedUpdates<P0, P1, P2, P3, P4> {}
let a1 = new unstable_batchedUpdates<P0, P1, P2, P3, P4>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_batchedUpdates variable 1`] = `
"var a = unstable_batchedUpdates;
"
`;

exports[`lib/react-dom.js modules react-dom unstable_renderSubtreeIntoContainer generated - callable - import namespace - typePrams(1) 1`] = `
"import * as M from \\"react-dom\\";

M.unstable_renderSubtreeIntoContainer();

let a1 = M.unstable_renderSubtreeIntoContainer<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_renderSubtreeIntoContainer generated - callable - import renamed - typePrams(1) 1`] = `
"import { unstable_renderSubtreeIntoContainer as t } from \\"react-dom\\";

t();

let a1 = t<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_renderSubtreeIntoContainer generated - callable - typePrams(1) 1`] = `
"import { unstable_renderSubtreeIntoContainer } from \\"react-dom\\";

unstable_renderSubtreeIntoContainer();

let a1 = unstable_renderSubtreeIntoContainer<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_renderSubtreeIntoContainer generated - class - import namespace - typePrams(1) 1`] = `
"import * as M from \\"react-dom\\";

new M.unstable_renderSubtreeIntoContainer();

class A1 extends M.unstable_renderSubtreeIntoContainer<P0> {}
let a1 = new M.unstable_renderSubtreeIntoContainer<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_renderSubtreeIntoContainer generated - class - import renamed - typePrams(1) 1`] = `
"import { unstable_renderSubtreeIntoContainer as t } from \\"react-dom\\";

new t();

class A1 extends t<P0> {}
let a1 = new t<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_renderSubtreeIntoContainer generated - class - typePrams(1) 1`] = `
"import { unstable_renderSubtreeIntoContainer } from \\"react-dom\\";

new unstable_renderSubtreeIntoContainer();

class A1 extends unstable_renderSubtreeIntoContainer<P0> {}
let a1 = new unstable_renderSubtreeIntoContainer<P0>();
"
`;

exports[`lib/react-dom.js modules react-dom unstable_renderSubtreeIntoContainer variable 1`] = `
"var a = unstable_renderSubtreeIntoContainer;
"
`;

exports[`lib/react-dom.js modules react-dom version variable 1`] = `
"var a = version;
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToNodeStream generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/server\\";

M.renderToNodeStream();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToNodeStream generated - callable - import renamed 1`] = `
"import { renderToNodeStream as t } from \\"react-dom/server\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToNodeStream generated - callable 1`] = `
"import { renderToNodeStream } from \\"react-dom/server\\";

renderToNodeStream();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToNodeStream generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/server\\";

new M.renderToNodeStream();

class A1 extends M.renderToNodeStream {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToNodeStream generated - class - import renamed 1`] = `
"import { renderToNodeStream as t } from \\"react-dom/server\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToNodeStream generated - class 1`] = `
"import { renderToNodeStream } from \\"react-dom/server\\";

new renderToNodeStream();

class A1 extends renderToNodeStream {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToNodeStream variable 1`] = `
"var a = renderToNodeStream;
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticMarkup generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/server\\";

M.renderToStaticMarkup();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticMarkup generated - callable - import renamed 1`] = `
"import { renderToStaticMarkup as t } from \\"react-dom/server\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticMarkup generated - callable 1`] = `
"import { renderToStaticMarkup } from \\"react-dom/server\\";

renderToStaticMarkup();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticMarkup generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/server\\";

new M.renderToStaticMarkup();

class A1 extends M.renderToStaticMarkup {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticMarkup generated - class - import renamed 1`] = `
"import { renderToStaticMarkup as t } from \\"react-dom/server\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticMarkup generated - class 1`] = `
"import { renderToStaticMarkup } from \\"react-dom/server\\";

new renderToStaticMarkup();

class A1 extends renderToStaticMarkup {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticMarkup variable 1`] = `
"var a = renderToStaticMarkup;
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticNodeStream generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/server\\";

M.renderToStaticNodeStream();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticNodeStream generated - callable - import renamed 1`] = `
"import { renderToStaticNodeStream as t } from \\"react-dom/server\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticNodeStream generated - callable 1`] = `
"import { renderToStaticNodeStream } from \\"react-dom/server\\";

renderToStaticNodeStream();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticNodeStream generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/server\\";

new M.renderToStaticNodeStream();

class A1 extends M.renderToStaticNodeStream {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticNodeStream generated - class - import renamed 1`] = `
"import { renderToStaticNodeStream as t } from \\"react-dom/server\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticNodeStream generated - class 1`] = `
"import { renderToStaticNodeStream } from \\"react-dom/server\\";

new renderToStaticNodeStream();

class A1 extends renderToStaticNodeStream {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToStaticNodeStream variable 1`] = `
"var a = renderToStaticNodeStream;
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToString generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/server\\";

M.renderToString();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToString generated - callable - import renamed 1`] = `
"import { renderToString as t } from \\"react-dom/server\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToString generated - callable 1`] = `
"import { renderToString } from \\"react-dom/server\\";

renderToString();
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToString generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/server\\";

new M.renderToString();

class A1 extends M.renderToString {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToString generated - class - import renamed 1`] = `
"import { renderToString as t } from \\"react-dom/server\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToString generated - class 1`] = `
"import { renderToString } from \\"react-dom/server\\";

new renderToString();

class A1 extends renderToString {}
"
`;

exports[`lib/react-dom.js modules react-dom/server renderToString variable 1`] = `
"var a = renderToString;
"
`;

exports[`lib/react-dom.js modules react-dom/server version variable 1`] = `
"var a = version;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils Simulate variable 1`] = `
"var a = Simulate;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils act generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.act();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils act generated - callable - import renamed 1`] = `
"import { act as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils act generated - callable 1`] = `
"import { act } from \\"react-dom/test-utils\\";

act();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils act generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.act();

class A1 extends M.act {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils act generated - class - import renamed 1`] = `
"import { act as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils act generated - class 1`] = `
"import { act } from \\"react-dom/test-utils\\";

new act();

class A1 extends act {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils act variable 1`] = `
"var a = act;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findAllInRenderedTree generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.findAllInRenderedTree();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findAllInRenderedTree generated - callable - import renamed 1`] = `
"import { findAllInRenderedTree as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findAllInRenderedTree generated - callable 1`] = `
"import { findAllInRenderedTree } from \\"react-dom/test-utils\\";

findAllInRenderedTree();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findAllInRenderedTree generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.findAllInRenderedTree();

class A1 extends M.findAllInRenderedTree {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findAllInRenderedTree generated - class - import renamed 1`] = `
"import { findAllInRenderedTree as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findAllInRenderedTree generated - class 1`] = `
"import { findAllInRenderedTree } from \\"react-dom/test-utils\\";

new findAllInRenderedTree();

class A1 extends findAllInRenderedTree {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findAllInRenderedTree variable 1`] = `
"var a = findAllInRenderedTree;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedComponentWithType generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.findRenderedComponentWithType();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedComponentWithType generated - callable - import renamed 1`] = `
"import { findRenderedComponentWithType as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedComponentWithType generated - callable 1`] = `
"import { findRenderedComponentWithType } from \\"react-dom/test-utils\\";

findRenderedComponentWithType();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedComponentWithType generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.findRenderedComponentWithType();

class A1 extends M.findRenderedComponentWithType {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedComponentWithType generated - class - import renamed 1`] = `
"import { findRenderedComponentWithType as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedComponentWithType generated - class 1`] = `
"import { findRenderedComponentWithType } from \\"react-dom/test-utils\\";

new findRenderedComponentWithType();

class A1 extends findRenderedComponentWithType {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedComponentWithType variable 1`] = `
"var a = findRenderedComponentWithType;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithClass generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.findRenderedDOMComponentWithClass();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithClass generated - callable - import renamed 1`] = `
"import { findRenderedDOMComponentWithClass as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithClass generated - callable 1`] = `
"import { findRenderedDOMComponentWithClass } from \\"react-dom/test-utils\\";

findRenderedDOMComponentWithClass();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithClass generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.findRenderedDOMComponentWithClass();

class A1 extends M.findRenderedDOMComponentWithClass {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithClass generated - class - import renamed 1`] = `
"import { findRenderedDOMComponentWithClass as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithClass generated - class 1`] = `
"import { findRenderedDOMComponentWithClass } from \\"react-dom/test-utils\\";

new findRenderedDOMComponentWithClass();

class A1 extends findRenderedDOMComponentWithClass {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithClass variable 1`] = `
"var a = findRenderedDOMComponentWithClass;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithTag generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.findRenderedDOMComponentWithTag();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithTag generated - callable - import renamed 1`] = `
"import { findRenderedDOMComponentWithTag as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithTag generated - callable 1`] = `
"import { findRenderedDOMComponentWithTag } from \\"react-dom/test-utils\\";

findRenderedDOMComponentWithTag();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithTag generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.findRenderedDOMComponentWithTag();

class A1 extends M.findRenderedDOMComponentWithTag {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithTag generated - class - import renamed 1`] = `
"import { findRenderedDOMComponentWithTag as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithTag generated - class 1`] = `
"import { findRenderedDOMComponentWithTag } from \\"react-dom/test-utils\\";

new findRenderedDOMComponentWithTag();

class A1 extends findRenderedDOMComponentWithTag {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils findRenderedDOMComponentWithTag variable 1`] = `
"var a = findRenderedDOMComponentWithTag;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponent generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.isCompositeComponent();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponent generated - callable - import renamed 1`] = `
"import { isCompositeComponent as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponent generated - callable 1`] = `
"import { isCompositeComponent } from \\"react-dom/test-utils\\";

isCompositeComponent();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponent generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.isCompositeComponent();

class A1 extends M.isCompositeComponent {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponent generated - class - import renamed 1`] = `
"import { isCompositeComponent as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponent generated - class 1`] = `
"import { isCompositeComponent } from \\"react-dom/test-utils\\";

new isCompositeComponent();

class A1 extends isCompositeComponent {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponent variable 1`] = `
"var a = isCompositeComponent;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponentWithType generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.isCompositeComponentWithType();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponentWithType generated - callable - import renamed 1`] = `
"import { isCompositeComponentWithType as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponentWithType generated - callable 1`] = `
"import { isCompositeComponentWithType } from \\"react-dom/test-utils\\";

isCompositeComponentWithType();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponentWithType generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.isCompositeComponentWithType();

class A1 extends M.isCompositeComponentWithType {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponentWithType generated - class - import renamed 1`] = `
"import { isCompositeComponentWithType as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponentWithType generated - class 1`] = `
"import { isCompositeComponentWithType } from \\"react-dom/test-utils\\";

new isCompositeComponentWithType();

class A1 extends isCompositeComponentWithType {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isCompositeComponentWithType variable 1`] = `
"var a = isCompositeComponentWithType;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isDOMComponent generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.isDOMComponent();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isDOMComponent generated - callable - import renamed 1`] = `
"import { isDOMComponent as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isDOMComponent generated - callable 1`] = `
"import { isDOMComponent } from \\"react-dom/test-utils\\";

isDOMComponent();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isDOMComponent generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.isDOMComponent();

class A1 extends M.isDOMComponent {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isDOMComponent generated - class - import renamed 1`] = `
"import { isDOMComponent as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isDOMComponent generated - class 1`] = `
"import { isDOMComponent } from \\"react-dom/test-utils\\";

new isDOMComponent();

class A1 extends isDOMComponent {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isDOMComponent variable 1`] = `
"var a = isDOMComponent;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElement generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.isElement();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElement generated - callable - import renamed 1`] = `
"import { isElement as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElement generated - callable 1`] = `
"import { isElement } from \\"react-dom/test-utils\\";

isElement();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElement generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.isElement();

class A1 extends M.isElement {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElement generated - class - import renamed 1`] = `
"import { isElement as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElement generated - class 1`] = `
"import { isElement } from \\"react-dom/test-utils\\";

new isElement();

class A1 extends isElement {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElement variable 1`] = `
"var a = isElement;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElementOfType generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.isElementOfType();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElementOfType generated - callable - import renamed 1`] = `
"import { isElementOfType as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElementOfType generated - callable 1`] = `
"import { isElementOfType } from \\"react-dom/test-utils\\";

isElementOfType();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElementOfType generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.isElementOfType();

class A1 extends M.isElementOfType {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElementOfType generated - class - import renamed 1`] = `
"import { isElementOfType as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElementOfType generated - class 1`] = `
"import { isElementOfType } from \\"react-dom/test-utils\\";

new isElementOfType();

class A1 extends isElementOfType {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils isElementOfType variable 1`] = `
"var a = isElementOfType;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils mockComponent generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.mockComponent();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils mockComponent generated - callable - import renamed 1`] = `
"import { mockComponent as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils mockComponent generated - callable 1`] = `
"import { mockComponent } from \\"react-dom/test-utils\\";

mockComponent();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils mockComponent generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.mockComponent();

class A1 extends M.mockComponent {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils mockComponent generated - class - import renamed 1`] = `
"import { mockComponent as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils mockComponent generated - class 1`] = `
"import { mockComponent } from \\"react-dom/test-utils\\";

new mockComponent();

class A1 extends mockComponent {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils mockComponent variable 1`] = `
"var a = mockComponent;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils renderIntoDocument generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.renderIntoDocument();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils renderIntoDocument generated - callable - import renamed 1`] = `
"import { renderIntoDocument as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils renderIntoDocument generated - callable 1`] = `
"import { renderIntoDocument } from \\"react-dom/test-utils\\";

renderIntoDocument();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils renderIntoDocument generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.renderIntoDocument();

class A1 extends M.renderIntoDocument {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils renderIntoDocument generated - class - import renamed 1`] = `
"import { renderIntoDocument as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils renderIntoDocument generated - class 1`] = `
"import { renderIntoDocument } from \\"react-dom/test-utils\\";

new renderIntoDocument();

class A1 extends renderIntoDocument {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils renderIntoDocument variable 1`] = `
"var a = renderIntoDocument;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedComponentsWithType generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.scryRenderedComponentsWithType();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedComponentsWithType generated - callable - import renamed 1`] = `
"import { scryRenderedComponentsWithType as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedComponentsWithType generated - callable 1`] = `
"import { scryRenderedComponentsWithType } from \\"react-dom/test-utils\\";

scryRenderedComponentsWithType();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedComponentsWithType generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.scryRenderedComponentsWithType();

class A1 extends M.scryRenderedComponentsWithType {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedComponentsWithType generated - class - import renamed 1`] = `
"import { scryRenderedComponentsWithType as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedComponentsWithType generated - class 1`] = `
"import { scryRenderedComponentsWithType } from \\"react-dom/test-utils\\";

new scryRenderedComponentsWithType();

class A1 extends scryRenderedComponentsWithType {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedComponentsWithType variable 1`] = `
"var a = scryRenderedComponentsWithType;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithClass generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.scryRenderedDOMComponentsWithClass();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithClass generated - callable - import renamed 1`] = `
"import { scryRenderedDOMComponentsWithClass as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithClass generated - callable 1`] = `
"import { scryRenderedDOMComponentsWithClass } from \\"react-dom/test-utils\\";

scryRenderedDOMComponentsWithClass();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithClass generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.scryRenderedDOMComponentsWithClass();

class A1 extends M.scryRenderedDOMComponentsWithClass {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithClass generated - class - import renamed 1`] = `
"import { scryRenderedDOMComponentsWithClass as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithClass generated - class 1`] = `
"import { scryRenderedDOMComponentsWithClass } from \\"react-dom/test-utils\\";

new scryRenderedDOMComponentsWithClass();

class A1 extends scryRenderedDOMComponentsWithClass {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithClass variable 1`] = `
"var a = scryRenderedDOMComponentsWithClass;
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithTag generated - callable - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

M.scryRenderedDOMComponentsWithTag();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithTag generated - callable - import renamed 1`] = `
"import { scryRenderedDOMComponentsWithTag as t } from \\"react-dom/test-utils\\";

t();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithTag generated - callable 1`] = `
"import { scryRenderedDOMComponentsWithTag } from \\"react-dom/test-utils\\";

scryRenderedDOMComponentsWithTag();
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithTag generated - class - import namespace 1`] = `
"import * as M from \\"react-dom/test-utils\\";

new M.scryRenderedDOMComponentsWithTag();

class A1 extends M.scryRenderedDOMComponentsWithTag {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithTag generated - class - import renamed 1`] = `
"import { scryRenderedDOMComponentsWithTag as t } from \\"react-dom/test-utils\\";

new t();

class A1 extends t {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithTag generated - class 1`] = `
"import { scryRenderedDOMComponentsWithTag } from \\"react-dom/test-utils\\";

new scryRenderedDOMComponentsWithTag();

class A1 extends scryRenderedDOMComponentsWithTag {}
"
`;

exports[`lib/react-dom.js modules react-dom/test-utils scryRenderedDOMComponentsWithTag variable 1`] = `
"var a = scryRenderedDOMComponentsWithTag;
"
`;
